--- a/IOSModelBay/Info.plist
+++ b/IOSModelBay/Info.plist
@@ -6,6 +6,7 @@
 	<true/>
 	<key>UIAppFonts</key>
 	<array>
+		<string>FUTURASTD-MEDIUM.OTF</string>
 		<string>ACASLONPRO-REGULAR.OTF</string>
 		<string>GOTHICB.TTF</string>
 		<string>GOTHICBI.TTF</string>
