--- a/IOSModelBay/Info.plist
+++ b/IOSModelBay/Info.plist
@@ -32,6 +32,8 @@
 		<string>FUTURASTD-BOOK.OTF</string>
 		<string>GOTHIC.TTF</string>
 	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
